<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/edit_flashcard_view_padding"
    tools:context="com.gregspitz.flashcardappkotlin.addeditflashcard.AddEditFlashcardActivity">

    <TextView
        android:id="@+id/failedToLoadFlashcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/failed_to_load_flashcard_text"
        android:visibility="gone"/>

    <EditText
        android:inputType="text"
        android:id="@+id/flashcardEditFront"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/flashcard_front_hint_text"/>

    <EditText
        android:inputType="text"
        android:id="@+id/flashcardEditBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/flashcard_back_hint_text"/>

    <Button
        android:id="@+id/saveFlashcardButton"
        android:text="@string/save_flashcard_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/showFlashcardListButton"
        android:text="@string/show_flashcard_list_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
