<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/flashcard_list_view_padding"
    tools:context="com.gregspitz.flashcardappkotlin.flashcardlist.FlashcardListActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/detailContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
        </android.support.v4.view.ViewPager>

        <TextView
            android:id="@+id/flashcardListMessages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/flashcardRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFlashcardFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/add_flashcard_fab_margin"
        android:src="@android:drawable/btn_plus"
        app:layout_anchor="@id/flashcardRecyclerView"
        app:layout_anchorGravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>
