<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/random_flashcard_view_padding"
    tools:context="com.gregspitz.flashcardappkotlin.randomflashcard.RandomFlashcardActivity">


    <Button
        android:id="@+id/nextFlashcardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/next_flashcard_button_text"/>

    <TextView
        android:id="@+id/flashcardSide"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"/>

</LinearLayout>
